k8s/40-customer-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: platform
spec:
  selector:
    app: customer
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: myrepo/customer-service:dev
          ports:
            - containerPort: 8081
