k8s/41-booking-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: platform
spec:
  selector:
    app: booking
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - name: booking
          image: myrepo/booking-service:dev
          ports:
            - containerPort: 8082
